--- a/css/style.css
+++ b/css/style.css
@@ -5,7 +5,7 @@
 }
 
 body {
-  background-color: rgb(77, 77, 77);
+  background: linear-gradient(135deg, #520b18fa, #004279cf);
   font-family: sans-serif;
   height: 100vh;
   display: flex;
@@ -22,12 +22,13 @@ body {
 .container h1 {
   font-family: Roboto, sans-serif;
   font-size: 32px;
-  font-weight: 400;
-  letter-spacing: 4px;
+  font-weight: 300;
+  letter-spacing: 3px;
   text-transform: uppercase;
 }
 .social {
-  padding-top: 10px;
+  margin-top: 15px;
+  margin-left: auto;
   display: flex;
   flex-direction: column;
   align-items: center;
